Removed IRBeam syntax. It differed to Extertrnal syntax only by one constructor (NoteGroup.Beamed) so it does not merit its place.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -82,7 +82,6 @@ library
     Payasan.Models.UTT.Base,
     Payasan.PSC.Backend.ABC.Output,
     Payasan.PSC.Backend.ABC.OutTrans,
-    Payasan.PSC.Backend.ABC.Syntax,
     Payasan.PSC.Backend.ABC.Utils,
     Payasan.PSC.Backend.Csound.BeamToCsound,
     Payasan.PSC.Backend.Csound.IStmt,
@@ -92,7 +91,6 @@ library
     Payasan.PSC.Backend.LilyPond.OutTrans,
     Payasan.PSC.Backend.LilyPond.RhythmicMarkup,
     Payasan.PSC.Backend.LilyPond.SimpleOutput,
-    Payasan.PSC.Backend.LilyPond.Syntax,
     Payasan.PSC.Backend.LilyPond.Utils,
     Payasan.PSC.Backend.MIDI.BeamToMIDI,
     Payasan.PSC.Backend.MIDI.Output,
@@ -108,26 +106,22 @@ library
     Payasan.PSC.Base.ShowTabularUtils,
     Payasan.PSC.Base.SyntaxCommon,
     Payasan.PSC.Pipeline,
-    Payasan.PSC.Repr.ExternalToIRBeam,
-    Payasan.PSC.Repr.IRBeamToExternal,
+    Payasan.PSC.Repr.External.AddBeams,
+    Payasan.PSC.Repr.External.ABCAliases,
     Payasan.PSC.Repr.External.ABCInTrans,
     Payasan.PSC.Repr.External.ABCParser,
+    Payasan.PSC.Repr.External.LilyPondAliases,
     Payasan.PSC.Repr.External.LilyPondInTrans,
     Payasan.PSC.Repr.External.LilyPondParser,
     Payasan.PSC.Repr.External.Plain,
     Payasan.PSC.Repr.External.ShowLinear,
     Payasan.PSC.Repr.External.ShowTabular,
     Payasan.PSC.Repr.External.Syntax,
+    Payasan.PSC.Repr.External.TiedNoteStream,
     Payasan.PSC.Repr.External.Traversals,
-    Payasan.PSC.Repr.IRBeam.AddBeams,
-    Payasan.PSC.Repr.IRBeam.Syntax,
-    Payasan.PSC.Repr.IRBeam.ShowLinear,
-    Payasan.PSC.Repr.IRBeam.ShowTabular,
-    Payasan.PSC.Repr.IRBeam.TiedNoteStream,
-    Payasan.PSC.Repr.IRBeam.Traversals,
     Payasan.PSC.Shell,
     Payasan.Score.Cadenza.Notelist,
-    Payasan.Score.Cadenza.Internal.CadenzaToIRBeam,
+    Payasan.Score.Cadenza.Internal.CadenzaToExternal,
     Payasan.Score.Cadenza.Internal.CadenzaToElementary,
     Payasan.Score.Cadenza.Internal.InTrans,
     Payasan.Score.Cadenza.Internal.Metrics,
