--- a/payasan.cabal
+++ b/payasan.cabal
@@ -35,6 +35,7 @@ library
                       parsec       >= 3.1   && <= 4.0,
                       zmidi-core
   exposed-modules:
+    Payasan.Base.AltPitch,
     Payasan.Base.AnalysisCommon,
     Payasan.Base.AnalysisTrace,
     Payasan.Base.Basis,
