Adding two low level event list representations. This is work towards simplifying Csound and MIDI output.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -120,6 +120,10 @@ library
     Payasan.PSC.Repr.External.Syntax,
     Payasan.PSC.Repr.External.TiedNoteStream,
     Payasan.PSC.Repr.External.Traversals,
+    Payasan.PSC.Repr.IREventBeam.ShowTabular,
+    Payasan.PSC.Repr.IREventBeam.Syntax,
+    Payasan.PSC.Repr.IREventFlat.ShowTabular,
+    Payasan.PSC.Repr.IREventFlat.Syntax,
     Payasan.PSC.Shell,
     Payasan.Score.Cadenza.Notelist,
     Payasan.Score.Cadenza.Internal.CadenzaToExternal,
@@ -136,14 +140,14 @@ library
     Payasan.Score.Elementary.Internal.AnalysisOutput,
     Payasan.Score.Elementary.Internal.LilyPondInTrans,
     Payasan.Score.Elementary.Internal.LilyPondParser,
-    Payasan.Score.Elementary.Internal.LinearOutput,
     Payasan.Score.Elementary.Internal.Metrics,
     Payasan.Score.Elementary.Internal.ElementaryToExternal,
     Payasan.Score.Elementary.Internal.Operations,
     Payasan.Score.Elementary.Internal.Plain,
-    Payasan.Score.Elementary.Internal.RecalcBars,
     Payasan.Score.Elementary.Internal.Syntax,
-    Payasan.Score.Elementary.Internal.TabularOutput,
+    Payasan.Score.Elementary.Internal.ShowLinear,
+    Payasan.Score.Elementary.Internal.ShowTabular,
+    Payasan.Score.Elementary.Internal.RecalcBars,
     Payasan.Score.Elementary.Internal.Transform,
     Payasan.Score.Elementary.Internal.Traversals,
     Payasan.Score.Elementary.Internal.Zipper
