Implemented tranlations to IREventBeam and IREventFlat.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -120,8 +120,10 @@ library
     Payasan.PSC.Repr.External.Syntax,
     Payasan.PSC.Repr.External.TiedNoteStream,
     Payasan.PSC.Repr.External.Traversals,
+    Payasan.PSC.Repr.ExternalToIREventBeam,
     Payasan.PSC.Repr.IREventBeam.ShowTabular,
     Payasan.PSC.Repr.IREventBeam.Syntax,
+    Payasan.PSC.Repr.IREventBeamToIREventFlat,
     Payasan.PSC.Repr.IREventFlat.ShowTabular,
     Payasan.PSC.Repr.IREventFlat.Syntax,
     Payasan.PSC.Shell,
