--- a/payasan.cabal
+++ b/payasan.cabal
@@ -84,10 +84,12 @@ library
     Payasan.PSC.Backend.ABC.Output,
     Payasan.PSC.Backend.ABC.OutTrans,
     Payasan.PSC.Backend.ABC.Utils,
+    Payasan.PSC.Backend.Csound.Base,
     Payasan.PSC.Backend.Csound.BeamToCsound,
     Payasan.PSC.Backend.Csound.IStmt,
     Payasan.PSC.Backend.Csound.Output,
     Payasan.PSC.Backend.Csound.OutTrans,
+    Payasan.PSC.Backend.Csound.RenderScore,
     Payasan.PSC.Backend.Csound.Syntax,
     Payasan.PSC.Backend.LilyPond.OutTrans,
     Payasan.PSC.Backend.LilyPond.RhythmicMarkup,
