--- a/payasan.cabal
+++ b/payasan.cabal
@@ -113,7 +113,6 @@ library
     Payasan.PSC.Repr.External.ABCAliases,
     Payasan.PSC.Repr.External.ABCInTrans,
     Payasan.PSC.Repr.External.ABCParser,
-    Payasan.PSC.Repr.External.Clocktime,
     Payasan.PSC.Repr.External.LilyPondAliases,
     Payasan.PSC.Repr.External.LilyPondInTrans,
     Payasan.PSC.Repr.External.LilyPondParser,
@@ -124,11 +123,14 @@ library
     Payasan.PSC.Repr.External.TiedNoteStream,
     Payasan.PSC.Repr.External.Traversals,
     Payasan.PSC.Repr.ExternalToIREventBeam,
+    Payasan.PSC.Repr.ExternalToIRSimpleTile,
     Payasan.PSC.Repr.IREventBeam.ShowTabular,
     Payasan.PSC.Repr.IREventBeam.Syntax,
     Payasan.PSC.Repr.IREventBeamToIREventFlat,
     Payasan.PSC.Repr.IREventFlat.ShowTabular,
     Payasan.PSC.Repr.IREventFlat.Syntax,
+    Payasan.PSC.Repr.IRSimpleTile.ShowTabular,
+    Payasan.PSC.Repr.IRSimpleTile.Syntax,
     Payasan.PSC.Shell,
     Payasan.Score.Cadenza.Notelist,
     Payasan.Score.Cadenza.Internal.CadenzaToExternal,
