Changes to integrate IRSimpleFlat. Note these have been done on different computer and might introduce line ending gremlims.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -122,15 +122,15 @@ library
     Payasan.PSC.Repr.External.Syntax,
     Payasan.PSC.Repr.External.TiedNoteStream,
     Payasan.PSC.Repr.External.Traversals,
-    Payasan.PSC.Repr.ExternalToIREventBeam,
     Payasan.PSC.Repr.ExternalToIRSimpleTile,
     Payasan.PSC.Repr.IREventBeam.ShowTabular,
     Payasan.PSC.Repr.IREventBeam.Syntax,
     Payasan.PSC.Repr.IREventBeamToIREventFlat,
     Payasan.PSC.Repr.IREventFlat.ShowTabular,
     Payasan.PSC.Repr.IREventFlat.Syntax,
-    Payasan.PSC.Repr.IRSimpleTile.ShowTabular,
+    Payasan.PSC.Repr.IRSimpleTile.Coalesce,
     Payasan.PSC.Repr.IRSimpleTile.Syntax,
+    Payasan.PSC.Repr.IRSimpleTile.ShowTabular,
     Payasan.PSC.Shell,
     Payasan.Score.Cadenza.Notelist,
     Payasan.Score.Cadenza.Internal.CadenzaToExternal,
