Added initial CompilerMonad model, this will replace Payasan.PSC.Pipeline and Payasan.PSC.Shell. Some changes to Payasan.Base.Utils module moving PSC specific code to PAyasan.PSC.Base.Utils.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -108,6 +108,8 @@ library
     Payasan.PSC.Base.ShowLinearUtils,
     Payasan.PSC.Base.ShowTabularUtils,
     Payasan.PSC.Base.SyntaxCommon,
+    Payasan.PSC.Base.Utils,
+    Payasan.PSC.CompilerMonad,
     Payasan.PSC.Pipeline,
     Payasan.PSC.Repr.External.AddBeams,
     Payasan.PSC.Repr.External.ABCInTrans,
