--- a/payasan.cabal
+++ b/payasan.cabal
@@ -78,6 +78,7 @@ library
     Payasan.Models.Lyrics.Internal.Syllable,
     Payasan.Models.Polyrhythms.Base,
     Payasan.Models.UTT.Base,
+    Payasan.PSC.ABC.Compile,
     Payasan.PSC.Backend.ABC.Output,
     Payasan.PSC.Backend.ABC.OutTrans,
     Payasan.PSC.Backend.ABC.Utils,
