Moved modules from Payasan.PSC.Backend.ABC to Payasan.PSC.ABC. Added errors to RewriteMonad stack - this has rippled a lot of changes which aren't properly dealt with yet (i.e. temporarily introducing fromRight). fromRight will be eliminated in due course.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -79,9 +79,9 @@ library
     Payasan.Models.Polyrhythms.Base,
     Payasan.Models.UTT.Base,
     Payasan.PSC.ABC.Compile,
-    Payasan.PSC.Backend.ABC.Output,
-    Payasan.PSC.Backend.ABC.OutTrans,
-    Payasan.PSC.Backend.ABC.Utils,
+    Payasan.PSC.ABC.Output,
+    Payasan.PSC.ABC.OutTrans,
+    Payasan.PSC.ABC.Utils,
     Payasan.PSC.Backend.Csound.Base,
     Payasan.PSC.Backend.Csound.BeamToCsound,
     Payasan.PSC.Backend.Csound.IStmt,
