Some work on simplifying _deltas_ when printing LilyPond.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -82,10 +82,6 @@ library
     Payasan.PSC.ABC.Output,
     Payasan.PSC.ABC.OutTrans,
     Payasan.PSC.ABC.Utils,
-    Payasan.PSC.MIDI.BeamToMIDI,
-    Payasan.PSC.MIDI.Output,
-    Payasan.PSC.MIDI.OutTrans,
-    Payasan.PSC.MIDI.PrimitiveSyntax,
     Payasan.PSC.Base.ABCCommon,
     Payasan.PSC.Base.ABCLexer,
     Payasan.PSC.Base.CompilerMonad,
@@ -99,6 +95,7 @@ library
     Payasan.PSC.Base.Utils,
     Payasan.PSC.Csound.Base,
     Payasan.PSC.Csound.BeamToCsound,
+--    Payasan.PSC.Csound.Compile,
     Payasan.PSC.Csound.IStmt,
     Payasan.PSC.Csound.Output,
     Payasan.PSC.Csound.OutTrans,
@@ -109,6 +106,11 @@ library
     Payasan.PSC.LilyPond.RhythmicMarkup,
     Payasan.PSC.LilyPond.SimpleOutput,
     Payasan.PSC.LilyPond.Utils,
+    Payasan.PSC.MIDI.BeamToMIDI,
+--    Payasan.PSC.MIDI.Compile,
+    Payasan.PSC.MIDI.Output,
+    Payasan.PSC.MIDI.OutTrans,
+    Payasan.PSC.MIDI.PrimitiveSyntax,
     Payasan.PSC.Pipeline,
     Payasan.PSC.Repr.External.AddBeams,
     Payasan.PSC.Repr.External.ABCInTrans,
