--- a/payasan.cabal
+++ b/payasan.cabal
@@ -123,13 +123,14 @@ library
     Payasan.PSC.Repr.External.Syntax,
     Payasan.PSC.Repr.External.TiedNoteStream,
     Payasan.PSC.Repr.External.Traversals,
-    Payasan.PSC.Repr.ExternalToIRSimpleTile,
+    Payasan.PSC.Repr.IREventBeam.FromIRSimpleTile,
     Payasan.PSC.Repr.IREventBeam.ShowTabular,
     Payasan.PSC.Repr.IREventBeam.Syntax,
-    Payasan.PSC.Repr.IREventBeamToIREventFlat,
+    Payasan.PSC.Repr.IREventFlat.FromIREventBeam,
     Payasan.PSC.Repr.IREventFlat.ShowTabular,
     Payasan.PSC.Repr.IREventFlat.Syntax,
     Payasan.PSC.Repr.IRSimpleTile.Coalesce,
+    Payasan.PSC.Repr.IRSimpleTile.FromExternal,
     Payasan.PSC.Repr.IRSimpleTile.Syntax,
     Payasan.PSC.Repr.IRSimpleTile.ShowTabular,
     Payasan.PSC.Shell,
