Renamed PSC.Repr.IREventBeam to PSC.Repr.IREventBar. This representation was always misnamed, it has bars but no beam groups.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -123,10 +123,10 @@ library
     Payasan.PSC.Repr.External.Syntax,
     Payasan.PSC.Repr.External.TiedNoteStream,
     Payasan.PSC.Repr.External.Traversals,
-    Payasan.PSC.Repr.IREventBeam.FromIRSimpleTile,
-    Payasan.PSC.Repr.IREventBeam.ShowTabular,
-    Payasan.PSC.Repr.IREventBeam.Syntax,
-    Payasan.PSC.Repr.IREventFlat.FromIREventBeam,
+    Payasan.PSC.Repr.IREventBar.FromIRSimpleTile,
+    Payasan.PSC.Repr.IREventBar.ShowTabular,
+    Payasan.PSC.Repr.IREventBar.Syntax,
+    Payasan.PSC.Repr.IREventFlat.FromIREventBar,
     Payasan.PSC.Repr.IREventFlat.ShowTabular,
     Payasan.PSC.Repr.IREventFlat.Syntax,
     Payasan.PSC.Repr.IRSimpleTile.Coalesce,
