Added code to calculate onsets for IRSimpleTile.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -131,6 +131,7 @@ library
     Payasan.PSC.Repr.IREventFlat.Syntax,
     Payasan.PSC.Repr.IRSimpleTile.Coalesce,
     Payasan.PSC.Repr.IRSimpleTile.FromExternal,
+    Payasan.PSC.Repr.IRSimpleTile.Onsets,
     Payasan.PSC.Repr.IRSimpleTile.Syntax,
     Payasan.PSC.Repr.IRSimpleTile.ShowTabular,
     Payasan.PSC.Shell,
