--- a/payasan.cabal
+++ b/payasan.cabal
@@ -105,6 +105,7 @@ library
     Payasan.PSC.MIDI.Output,
     Payasan.PSC.MIDI.OutTrans,
     Payasan.PSC.MIDI.PrimitiveSyntax,
+    Payasan.PSC.MIDI.Syntax,
     Payasan.PSC.Old.Pipeline,
     Payasan.PSC.Old.Shell,
     Payasan.PSC.Repr.External.AddBeams,
