Moved RewriteMonad module in Payasan.PSC.Old so it is easier to identify and deprecate.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -87,7 +87,6 @@ library
     Payasan.PSC.Base.CompilerMonad,
     Payasan.PSC.Base.LilyPondCommon,
     Payasan.PSC.Base.LilyPondLexer,
-    Payasan.PSC.Base.RewriteMonad,
     Payasan.PSC.Base.ShowCommon,
     Payasan.PSC.Base.ShowLinearUtils,
     Payasan.PSC.Base.ShowTabularUtils,
@@ -106,6 +105,7 @@ library
     Payasan.PSC.MIDI.OutTrans,
     Payasan.PSC.MIDI.PrimitiveSyntax,
     Payasan.PSC.MIDI.Syntax,
+    Payasan.PSC.Old.RewriteMonad,
     Payasan.PSC.Old.Pipeline,
     Payasan.PSC.Old.Shell,
     Payasan.PSC.Repr.External.AddBeams,
