Moved all LilyPond modules into Payasan.PSC.LilyPond namespace, this includes the parsing and unquoting modules.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -85,8 +85,6 @@ library
     Payasan.PSC.Base.ABCCommon,
     Payasan.PSC.Base.ABCLexer,
     Payasan.PSC.Base.CompilerMonad,
-    Payasan.PSC.Base.LilyPondCommon,
-    Payasan.PSC.Base.LilyPondLexer,
     Payasan.PSC.Base.ShowCommon,
     Payasan.PSC.Base.ShowLinearUtils,
     Payasan.PSC.Base.ShowTabularUtils,
@@ -95,8 +93,12 @@ library
     Payasan.PSC.Csound.Compile,
     Payasan.PSC.Csound.Output,
     Payasan.PSC.Csound.Utils,
+    Payasan.PSC.LilyPond.Common,
     Payasan.PSC.LilyPond.Compile,
+    Payasan.PSC.LilyPond.Lexer,
     Payasan.PSC.LilyPond.OutTrans,
+    Payasan.PSC.LilyPond.ExternalParser,
+    Payasan.PSC.LilyPond.ExternalUnquote,
     Payasan.PSC.LilyPond.RhythmicMarkup,
     Payasan.PSC.LilyPond.SimpleOutput,
     Payasan.PSC.LilyPond.Utils,
@@ -109,8 +111,6 @@ library
     Payasan.PSC.Repr.External.AddBeams,
     Payasan.PSC.Repr.External.ABCInTrans,
     Payasan.PSC.Repr.External.ABCParser,
-    Payasan.PSC.Repr.External.LilyPondInTrans,
-    Payasan.PSC.Repr.External.LilyPondParser,
     Payasan.PSC.Repr.External.OutTransSeconds,
     Payasan.PSC.Repr.External.Plain,
     Payasan.PSC.Repr.External.ShowLinear,
