Moved all the ABC modules into the Payasan.PSC.ABC namespace, this includes the parsing and unquoting modules.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -78,12 +78,14 @@ library
     Payasan.Models.Lyrics.Internal.Syllable,
     Payasan.Models.Polyrhythms.Base,
     Payasan.Models.UTT.Base,
+    Payasan.PSC.ABC.Common,
     Payasan.PSC.ABC.Compile,
+    Payasan.PSC.ABC.ExternalUnquote,
+    Payasan.PSC.ABC.ExternalParser,
+    Payasan.PSC.ABC.Lexer,
     Payasan.PSC.ABC.Output,
     Payasan.PSC.ABC.OutTrans,
     Payasan.PSC.ABC.Utils,
-    Payasan.PSC.Base.ABCCommon,
-    Payasan.PSC.Base.ABCLexer,
     Payasan.PSC.Base.CompilerMonad,
     Payasan.PSC.Base.ShowCommon,
     Payasan.PSC.Base.ShowLinearUtils,
@@ -109,8 +111,6 @@ library
     Payasan.PSC.Old.Pipeline,
     Payasan.PSC.Old.Shell,
     Payasan.PSC.Repr.External.AddBeams,
-    Payasan.PSC.Repr.External.ABCInTrans,
-    Payasan.PSC.Repr.External.ABCParser,
     Payasan.PSC.Repr.External.OutTransSeconds,
     Payasan.PSC.Repr.External.Plain,
     Payasan.PSC.Repr.External.ShowLinear,
