Initial work _modernizing_ Payasan.Score.Cadenza. Cadenza and Elementary should follow the new ways of doing things that have been hatched in Payasan.PSC.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -86,7 +86,6 @@ library
     Payasan.PSC.ABC.Output,
     Payasan.PSC.ABC.OutTrans,
     Payasan.PSC.ABC.Pretty,
-    Payasan.PSC.Base.CompilerMonad,
     Payasan.PSC.Base.ShowCommon,
     Payasan.PSC.Base.ShowLinearUtils,
     Payasan.PSC.Base.ShowTabularUtils,
@@ -135,7 +134,8 @@ library
     Payasan.Score.Cadenza.Internal.CadenzaToExternal,
     Payasan.Score.Cadenza.Internal.InTrans,
     Payasan.Score.Cadenza.Internal.Metrics,
-    Payasan.Score.Cadenza.Internal.Parser,
+    Payasan.Score.Cadenza.Internal.LilyPondParser,
+    Payasan.Score.Cadenza.Internal.LilyPondUnquote,
     Payasan.Score.Cadenza.Internal.Syntax,
     Payasan.Score.Cadenza.Internal.Traversals,
     Payasan.Score.Cadenza.Internal.Transform,
