Implemented a LilyPondUnquote for Elementary syntax.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -142,8 +142,8 @@ library
     Payasan.Score.Elementary.Internal.ABCInTrans,
     Payasan.Score.Elementary.Internal.ABCParser,
     Payasan.Score.Elementary.Internal.AnalysisOutput,
-    Payasan.Score.Elementary.Internal.LilyPondInTrans,
     Payasan.Score.Elementary.Internal.LilyPondParser,
+    Payasan.Score.Elementary.Internal.LilyPondUnquote,
     Payasan.Score.Elementary.Internal.Metrics,
     Payasan.Score.Elementary.Internal.ElementaryToExternal,
     Payasan.Score.Elementary.Internal.Operations,
