Implemented ABCUnquote for Elementary syntax.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -139,8 +139,8 @@ library
     Payasan.Score.Cadenza.Internal.Traversals,
     Payasan.Score.Cadenza.Internal.Transform,
     Payasan.Score.Elementary.Notelist,
-    Payasan.Score.Elementary.Internal.ABCInTrans,
     Payasan.Score.Elementary.Internal.ABCParser,
+    Payasan.Score.Elementary.Internal.ABCUnquote,
     Payasan.Score.Elementary.Internal.AnalysisOutput,
     Payasan.Score.Elementary.Internal.LilyPondParser,
     Payasan.Score.Elementary.Internal.LilyPondUnquote,
