Minor initial 'modernization' for Chordmode modules.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -52,10 +52,10 @@ library
     Payasan.LilyPond.Chordmode.Notelist,
     Payasan.LilyPond.Chordmode.Internal.Base,
     Payasan.LilyPond.Chordmode.Internal.Interpret,
-    Payasan.LilyPond.Chordmode.Internal.InTrans,
     Payasan.LilyPond.Chordmode.Internal.Output,
     Payasan.LilyPond.Chordmode.Internal.OutTrans,
     Payasan.LilyPond.Chordmode.Internal.Parser,
+    Payasan.LilyPond.Chordmode.Internal.Unquote,
     Payasan.LilyPond.FretDiagram.Notelist,
     Payasan.LilyPond.FretDiagram.Internal.Base,
     Payasan.LilyPond.FretDiagram.Internal.Interpret,
