ABC.Output has been rewritten to use an intermediate form IRSimpleDoc. Output is now simpler and doesn't need a state monad to track ckey and meter changes.

--- a/payasan.cabal
+++ b/payasan.cabal
@@ -83,6 +83,7 @@ library
     Payasan.PSC.ABC.Compile,
     Payasan.PSC.ABC.ExternalUnquote,
     Payasan.PSC.ABC.ExternalParser,
+    Payasan.PSC.ABC.IRSimpleDoc,
     Payasan.PSC.ABC.Lexer,
     Payasan.PSC.ABC.Output,
     Payasan.PSC.ABC.OutTrans,
