--- a/payasan.cabal
+++ b/payasan.cabal
@@ -100,6 +100,7 @@ library
     Payasan.PSC.LilyPond.Compile,
     Payasan.PSC.LilyPond.ExternalParser,
     Payasan.PSC.LilyPond.ExternalUnquote,
+    Payasan.PSC.LilyPond.IRSimpleDoc,
     Payasan.PSC.LilyPond.Lexer,
     Payasan.PSC.LilyPond.OutTrans,
     Payasan.PSC.LilyPond.Pretty,
